# climate-housing-risk

./: .gitignore  pyproject.toml
docs/plan_and_structure/: climate_data_justification.md  project_plan_v1.md
